k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: develop
  labels:
    istio-injection: enabled
