k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-jsonrpc
  namespace: develop
  labels:
    app: golang-jsonrpc
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: golang-jsonrpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-jsonrpc
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-jsonrpc
      version: v1
  template:
    metadata:
      labels:
        app: golang-jsonrpc
        version: v1
    spec:
      serviceAccountName: golang-jsonrpc
      containers:
      - image: baocang/golang-jsonrpc-demo:0.0.1
        imagePullPolicy: IfNotPresent
        name: golang-jsonrpc
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "100m"
